# OSuRV_Projekat

OSuRV_Project/: .gitignore  skripta.sh  start.sh
OSuRV_Project/ROS/arm_and_chassis_ws/: [Documents]  flow.sh  r1
OSuRV_Project/ROS/arm_and_chassis_ws/src/common_teleop/: CMakeLists.txt  setup.py
OSuRV_Project/ROS/arm_and_chassis_ws/src/common_teleop/routines/: _common.moveitcmd  close_gripper.moveitcmd  open_gripper.moveitcmd  r1.moveitcmd  r12.moveitcmd  turn_right.chassiscmd
OSuRV_Project/ROS/arm_and_chassis_ws/src/common_teleop/scripts/: change_controller.py
OSuRV_Project/ROS/arm_and_chassis_ws/src/common_teleop/src/: mode_teleop.py  routines_server.py  routines_teleop.py
OSuRV_Project/ROS/arm_and_chassis_ws/src/s4a_main/: .gitignore  package.xml  setup.py
OSuRV_Project/ROS/arm_and_chassis_ws/src/s4a_main/config/: controllers.yaml
OSuRV_Project/ROS/arm_and_chassis_ws/src/s4a_main/config/plot/: all.xml
OSuRV_Project/ROS/arm_and_chassis_ws/src/s4a_main/launch/: config.rviz
OSuRV_Project/ROS/arm_and_chassis_ws/src/s4a_main/src/: exec.hpp  ostream_coloring.hpp
OSuRV_Project/ROS/arm_and_chassis_ws/src/s4a_main/urdf/: arm.urdf.xacro  hand.urdf.xacro  helper_macros.xacro
OSuRV_Project/ROS/arm_and_chassis_ws/src/s4a_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
OSuRV_Project/ROS/arm_and_chassis_ws/src/s4a_moveit_config/config/: simple_moveit_controllers.yaml
OSuRV_Project/ROS/arm_and_chassis_ws/src/s4a_moveit_config/launch/: arm_moveit_controller_manager.launch.xml  default_warehouse_db.launch  moveit.rviz  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  simple_moveit_controller_manager.launch.xml
OSuRV_Project/ROS/arm_and_chassis_ws/src/s4a_teleop/: package.xml
OSuRV_Project/ROS/arm_and_chassis_ws/src/s4a_teleop/config/: joint_limits_for_servoing.yaml  s4a_servo_server_config.yaml
OSuRV_Project/ROS/arm_and_chassis_ws/src/s4a_teleop/launch/: servo_teleop.launch  tree.txt
OSuRV_Project/ROS/arm_and_chassis_ws/src/wc_main/: package.xml  setup.py
OSuRV_Project/ROS/arm_and_chassis_ws/src/wc_main/launch/: main.launch
OSuRV_Project/ROS/arm_and_chassis_ws/src/wc_main/src/: simple_ackermann_steering_controller.cpp
OSuRV_Project/ROS/arm_and_chassis_ws/src/wc_teleop/: CMakeLists.txt
OSuRV_Project/ROS/arm_and_chassis_ws/src/wc_teleop/launch/: tree.txt
OSuRV_Project/ROS/arm_and_chassis_ws/src/wc_teleop/src/: manual_teleop.py
OSuRV_Project/SW/Driver/motor_ctrl/: flow.sh  gpio.c  gpio.h  main.c  servo_fb.h  sw_pwm_parkinson.c  sw_pwm_stable.c
OSuRV_Project/SW/Driver/motor_ctrl/include/: motor_ctrl.h  motor_ctrl_pwm_map.h
OSuRV_Project/skripte/: ruka1.sh  rutine.sh
OSuRV_Project1/: README.md  wscript
OSuRV_Project1/ROS/: joypad_mapping.xls
OSuRV_Project1/ROS/arm_and_chassis_ws/: flow.sh
OSuRV_Project1/ROS/arm_and_chassis_ws/src/common_teleop/: package.xml
OSuRV_Project1/ROS/arm_and_chassis_ws/src/common_teleop/launch/: routines_teleop.launch  tree.txt
OSuRV_Project1/ROS/arm_and_chassis_ws/src/common_teleop/routines/: _common.moveitcmd  close_gripper.moveitcmd  home.moveitcmd  r2.moveitcmd  r22.moveitcmd
OSuRV_Project1/ROS/arm_and_chassis_ws/src/common_teleop/src/: tf_publish.cpp
OSuRV_Project1/ROS/arm_and_chassis_ws/src/common_teleop/src/chassis_commander/: interpreter.py
OSuRV_Project1/ROS/arm_and_chassis_ws/src/s4a_main/: CMakeLists.txt
OSuRV_Project1/ROS/arm_and_chassis_ws/src/s4a_main/include/: type_shorts.h
OSuRV_Project1/ROS/arm_and_chassis_ws/src/s4a_main/launch/: check_geom.launch  main.launch
OSuRV_Project1/ROS/arm_and_chassis_ws/src/s4a_main/src/: exec.cpp  robot_hardware_interface.cpp  robot_hardware_interface.hpp  robot_hardware_interface_node.cpp
OSuRV_Project1/ROS/arm_and_chassis_ws/src/s4a_moveit_config/config/: arm.srdf  fake_controllers.yaml  joint_limits.yaml  stomp_planning.yaml
OSuRV_Project1/ROS/arm_and_chassis_ws/src/s4a_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  setup_assistant.launch  stomp_planning_pipeline.launch.xml
OSuRV_Project1/ROS/arm_and_chassis_ws/src/s4a_teleop/: CMakeLists.txt
OSuRV_Project1/ROS/arm_and_chassis_ws/src/s4a_teleop/config/: joypad_teleop_config.yaml  s4a_servo_server_config_over_traj.yaml
OSuRV_Project1/ROS/arm_and_chassis_ws/src/s4a_teleop/launch/: jog_teleop.launch
OSuRV_Project1/ROS/arm_and_chassis_ws/src/s4a_teleop/src/: jog_teleop.py
OSuRV_Project1/ROS/arm_and_chassis_ws/src/s4a_teleop/src/common/: utils.py
OSuRV_Project1/ROS/arm_and_chassis_ws/src/wc_main/: CMakeLists.txt
OSuRV_Project1/ROS/arm_and_chassis_ws/src/wc_main/src/: simple_ackermann_steering_controller.hpp  simple_ackermann_steering_controller_node.cpp
OSuRV_Project1/ROS/arm_and_chassis_ws/src/wc_teleop/: package.xml  setup.py
OSuRV_Project1/ROS/arm_and_chassis_ws/src/wc_teleop/launch/: manual_teleop.launch
OSuRV_Project1/SW/: RPi_Pins_for_PWM_Map_No_1.xls
OSuRV_Project1/SW/Driver/motor_ctrl/: .gitignore  Makefile  bldc.c  bldc.h  hw_pwm.c  hw_pwm.h  pwm.c  pwm.h  servo_fb.c  sw_pwm.h  sw_pwm_busy.c
OSuRV_Project1/SW/Test/test_app/: .gitignore  flow.sh  test_bldc.c  test_pwm.c  test_pwm_map.cpp  test_servos.c  wscript
