<?xml version="1.0"?>
<package>
	<name>wc_teleop</name>
	<version>0.1.0</version>
	<description>
		Teleop for wheeled chassis.
	</description>
	<maintainer email="milos.subotic.sm@gmail.com">Milos Subotic</maintainer>
	<author email="milos.subotic.sm@gmail.com">Milos Subotic</author>
	<license>Proprietary</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>rospy</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>ackermann_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<run_depend>rospy</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>ackermann_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
	

</package>
